first auto-commit-man

--- a/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/011_03_IntroToML.html
+++ b/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/011_03_IntroToML.html
@@ -145,123 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-</div>
-<div class="cell markdown">
-<h1 id="introduction-to-machine-learning"><a class="header" href="#introduction-to-machine-learning">Introduction to Machine Learning</a></h1>
-<p><strong>Some very useful resources we will weave around</strong> for Statistical Learning, Data Mining, Machine Learning:</p>
-<ul>
-<li>January 2014, Stanford University professors Trevor Hastie and Rob Tibshirani (authors of the legendary Elements of Statistical Learning textbook) taught an online course based on their newest textbook, An Introduction to Statistical Learning with Applications in R (ISLR).</li>
-<li><a href="https://www.dataschool.io/15-hours-of-expert-machine-learning-videos/">https://www.dataschool.io/15-hours-of-expert-machine-learning-videos/</a></li>
-<li>free PDF of the ISLR book: <a href="http://www-bcf.usc.edu/%7Egareth/ISL/">http://www-bcf.usc.edu/~gareth/ISL/</a></li>
-<li>A more theoretically sound book with interesting aplications is <em>Elements of Statistical Learning</em> by the Stanford Gang of 3 (Hastie, Tibshirani and Friedman):
-<ul>
-<li>free PDF of the 10th printing: <a href="http://statweb.stanford.edu/%7Etibs/ElemStatLearn/printings/ESLII_print10.pdf">http://statweb.stanford.edu/~tibs/ElemStatLearn/printings/ESLII_print10.pdf</a></li>
-<li>Solutions: <a href="http://waxworksmath.com/Authors/G_M/Hastie/WriteUp/weatherwax_epstein_hastie_solutions_manual.pdf">http://waxworksmath.com/Authors/G<em>M/Hastie/WriteUp/weatherwax</em>epstein<em>hastie</em>solutions_manual.pdf</a></li>
-</ul>
-</li>
-<li>A great series on Probabilistic ML by Kevin P. Murphy <a href="https://probml.github.io/pml-book/">https://probml.github.io/pml-book/</a>.</li>
-</ul>
-<p>Deep Learning is a very popular method currently (2017) in Machine Learning and I recommend Andrew Ng's free course in Courseera for this if you have not taken a course in deep learning already.</p>
-</div>
-<div class="cell markdown">
-<p><strong>Note:</strong> This is an applied course in data science and we will quickly move to doing things with data. You have to do work to get a deeper mathematical understanding or take other courses. We will focus on intution here and the distributed ML Pipeline in action.</p>
-<p><em>I am assuming several of you have or are taking ML courses. In this course we will focus on getting our hads dirty quickly with some level of common understanding across all the disciplines represented here. Please dive deep at your own time to desired depths and tangents based on your background.</em></p>
-</div>
-<div class="cell markdown">
-<h3 id="summary-of-machine-learning-at-a-high-level"><a class="header" href="#summary-of-machine-learning-at-a-high-level">Summary of Machine Learning at a High Level</a></h3>
-<ul>
-<li>A rough definition of machine learning.
-<ul>
-<li>constructing and studying algorithms that learn from and make predictions on data.</li>
-</ul>
-</li>
-<li>This broad area involves tools and ideas from various domains, including:
-<ul>
-<li>computer science,</li>
-<li>probability and statistics,</li>
-<li>optimization,</li>
-<li>linear algebra</li>
-<li>logic</li>
-<li>etc.</li>
-</ul>
-</li>
-<li>Common examples of ML, include:
-<ul>
-<li>facial recognition,</li>
-<li>link prediction,</li>
-<li>text or document classification, eg.::
-<ul>
-<li>spam detection,</li>
-</ul>
-</li>
-<li>protein structure prediction</li>
-<li>teaching computers to play games (go!)</li>
-</ul>
-</li>
-</ul>
-<h4 id="some-common-terminology"><a class="header" href="#some-common-terminology">Some common terminology</a></h4>
-<h5 id="using-example-of-spam-detection-as-a-running-example"><a class="header" href="#using-example-of-spam-detection-as-a-running-example">using example of spam detection as a running example.</a></h5>
-<ul>
-<li>
-<p>the data points we learn from are call observations:</p>
-<ul>
-<li>they are items or entities used for::
-<ul>
-<li>learning or</li>
-<li>evaluation.</li>
-</ul>
-</li>
-</ul>
-</li>
-<li>
-<p>in the context of spam detection,</p>
-<ul>
-<li>emails are our observations.</li>
-<li>Features are attributes used to represent an observation.</li>
-<li>Features are typically numeric,
-<ul>
-<li>and in spam detection, they can be:</li>
-<li>the length,</li>
-<li>the date, or</li>
-<li>the presence or absence of keywords in emails.</li>
-</ul>
-</li>
-<li>Labels are values or categories assigned to observations.
-<ul>
-<li>and in spam detection, they can be:</li>
-<li>an email being defined as spam or not spam.</li>
-</ul>
-</li>
-</ul>
-</li>
-<li>
-<p>Training and test data sets are the observations that we use to train and evaluate a learning algorithm.</p>
-</li>
-<li>
-<p><strong>Pop-Quiz</strong></p>
-<ul>
-<li>What is the difference between supervised and unsupervised learning?</li>
-</ul>
-</li>
-</ul>
-</div>
-<div class="cell markdown">
-<h5 id="for-a-statsstanford-hastie-tibshirani-perspective-on-supervised-and-unsupervised-learning"><a class="header" href="#for-a-statsstanford-hastie-tibshirani-perspective-on-supervised-and-unsupervised-learning">For a Stats@Stanford Hastie-Tibshirani Perspective on Supervised and Unsupervised Learning:</a></h5>
-<p><strong>(watch later 12:12)</strong>:</p>
-<p><a href="https://youtu.be/Z0v9QMkA3dA?rel=0&amp;autoplay=1&amp;modestbranding=1&amp;start=1"><img src="http://img.youtube.com/vi/Z0v9QMkA3dA/0.jpg" alt="Supervised and Unsupervised Learning (12:12)" /></a></p>
-<p>From : <a href="https://www.dataschool.io/15-hours-of-expert-machine-learning-videos/">https://www.dataschool.io/15-hours-of-expert-machine-learning-videos/</a>.</p>
-</div>
-<div class="cell markdown">
-<h2 id="ml-pipelines"><a class="header" href="#ml-pipelines">ML Pipelines</a></h2>
-<p>Here we will use ML Pipelines to do machine learning at scale.</p>
-<p>See <a href="https://spark.apache.org/docs/latest/ml-pipeline.html">https://spark.apache.org/docs/latest/ml-pipeline.html</a> for a quick overview.</p>
-<p>Read this section for an overview:</p>
-<ul>
-<li><a href="https://learning.oreilly.com/library/view/spark-the-definitive/9781491912201/ch24.html#high-level-mllib-concepts">https://learning.oreilly.com/library/view/spark-the-definitive/9781491912201/ch24.html#high-level-mllib-concepts</a>.</li>
-</ul>
-</div>
+                        <h1 id="011_03_introtoml"><a class="header" href="#011_03_introtoml">011_03_IntroToML</a></h1>
 
                     </main>
 
