--- a/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/012_UnsupervisedClustering_1MSongsKMeans_Intro.html
+++ b/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/012_UnsupervisedClustering_1MSongsKMeans_Intro.html
@@ -145,58 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-</div>
-<div class="cell markdown">
-<h1 id="million-song-dataset---kaggle-challenge"><a class="header" href="#million-song-dataset---kaggle-challenge">Million Song Dataset - Kaggle Challenge</a></h1>
-<h2 id="predict-which-songs-a-user-will-listen-to"><a class="header" href="#predict-which-songs-a-user-will-listen-to">Predict which songs a user will listen to.</a></h2>
-<p><strong>SOURCE:</strong> This is just a <em>Scala</em>-rification of the <em>Python</em> notebook published in databricks community edition in 2016.</p>
-</div>
-<div class="cell markdown">
-<p>When you first hear a song, do you ever categorize it as slow or fast in your head? Is it even a valid categorization? If so, can one do it automatically? I have always wondered about that. That is why I got excited when I learned about the <a href="https://www.kaggle.com/c/msdchallenge#description">Million Songs Dataset -Kaggle Challenge</a>.</p>
-<p>In this tutorial we will walk through a practical example of a data science project with Apache Spark in Python. We are going to parse, explore and model a sample from the million songs dataset stored on distributed storage. This tutorial is organized into three sections:</p>
-<ol>
-<li>ETL: Parses raw texts and creates a cached table</li>
-<li>Explore: Explores different aspects of the songs table using graphs</li>
-<li>Model: Uses SparkML to cluster songs based on some of their attributes</li>
-</ol>
-<p><img src="http://training.databricks.com/databricks_guide/end-to-end.png" alt="End to End Data Science" /></p>
-<p>The goal of this tutorial is to prepare you for real world data science projects. Make sure you go through the tutorial in the above order and use the exercises to make yourself familiar further with the API. Also make sure you run these notebooks on a <strong>1.6.x</strong> cluster.</p>
-</div>
-<div class="cell markdown">
-<h3 id="1-etl"><a class="header" href="#1-etl">1. ETL</a></h3>
-<p>The first step of most data science projects is extracting, transforming and loading data into well formated tables. Our example starts with ETL as well. By following the ETL noteboook you can expect to learn about following Spark concepts:</p>
-<ul>
-<li>RDD: Resilient Distributed Dataset</li>
-<li>Reading and transforming RDDs</li>
-<li>Schema in Spark</li>
-<li>Spark DataFrame</li>
-<li>Temp tables</li>
-<li>Caching tables</li>
-</ul>
-</div>
-<div class="cell markdown">
-<h3 id="2-explore"><a class="header" href="#2-explore">2. Explore</a></h3>
-<p>Exploratory analysis is a key step in any real data project. Data scientists use variety of tools to explore and visualize their data. In the second notebook of this tutorial we introduce several tools in Python and Databricks notebooks that can help you visually explore your large data. By reading this notebook and finishing its exercises you will become familiar with:</p>
-<ul>
-<li>How to view the schema of a table</li>
-<li>How to display ggplot and matplotlib figures in Notebooks</li>
-<li>How to summarize and visualize different aspects of large datasets</li>
-<li>How to sample and visualize large data</li>
-</ul>
-</div>
-<div class="cell markdown">
-<h3 id="3-model"><a class="header" href="#3-model">3. Model</a></h3>
-<p>The end goal of many data scientists is producing useful models. These models are often used for prediction of new and upcoming events in production. In our third notebook we construct a simple K-means clustering model. In this notebook you will learn about:</p>
-<ul>
-<li>Feature transformation</li>
-<li>Fitting a model using SparkML API</li>
-<li>Applying a model to data</li>
-<li>Visualizing model results</li>
-<li>Model tuning</li>
-</ul>
-</div>
+                        <h1 id="012_unsupervisedclustering_1msongskmeans_intro"><a class="header" href="#012_unsupervisedclustering_1msongskmeans_intro">012_UnsupervisedClustering_1MSongsKMeans_Intro</a></h1>
 
                     </main>
 
