--- a/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/019x_000_dataTypesProgGuide.html
+++ b/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/019x_000_dataTypesProgGuide.html
@@ -145,32 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-</div>
-<div class="cell markdown">
-<p>This is an elaboration of the <a href="http://spark.apache.org/docs/latest/mllib-data-types.html">Apache Spark mllib-progamming-guide on mllib-data-types</a>.</p>
-<h1 id="overview"><a class="header" href="#overview"><a href="/#workspace/scalable-data-science/xtraResources/ProgGuides2_2/MLlibProgrammingGuide/000_MLlibProgGuide">Overview</a></a></h1>
-<h2 id="data-types---mllib-programming-guide"><a class="header" href="#data-types---mllib-programming-guide"><a href="/#workspace/scalable-data-science/xtraResources/ProgGuides2_2/MLlibProgrammingGuide/dataTypes/000_dataTypesProgGuide">Data Types - MLlib Programming Guide</a></a></h2>
-<ul>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#local-vector">Local vector</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#labeled-point">Labeled point</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#local-matrix">Local matrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#distributed-matrix">Distributed matrix</a>
-<ul>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#rowmatrix">RowMatrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#indexedrowmatrix">IndexedRowMatrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#coordinatematrix">CoordinateMatrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#blockmatrix">BlockMatrix</a></li>
-</ul>
-</li>
-</ul>
-<p>MLlib supports local vectors and matrices stored on a single machine, as well as distributed matrices backed by one or more RDDs. Local vectors and local matrices are simple data models that serve as public interfaces. The underlying linear algebra operations are provided by <a href="http://www.scalanlp.org/">Breeze</a> and <a href="http://jblas.org/">jblas</a>. A training example used in supervised learning is called a “labeled point” in MLlib.</p>
-</div>
-<div class="cell markdown">
-<h1 id="why-are-we-going-through-the-basic-distributed-linear-algebra-data-types"><a class="header" href="#why-are-we-going-through-the-basic-distributed-linear-algebra-data-types">Why are we going through the basic distributed linear algebra Data Types?</a></h1>
-<p>This is to get you to be able to directly use them in a project or to roll your own algorithms.</p>
-</div>
+                        <h1 id="019x_000_datatypesprogguide"><a class="header" href="#019x_000_datatypesprogguide">019x_000_dataTypesProgGuide</a></h1>
 
                     </main>
 
