--- a/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/019x_001_LocalVector.html
+++ b/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/019x_001_LocalVector.html
@@ -145,128 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-</div>
-<div class="cell markdown">
-<p>This is an elaboration of the <a href="http://spark.apache.org/docs/latest/mllib-data-types.html">Apache Spark mllib-progamming-guide on mllib-data-types</a>.</p>
-<h1 id="overview"><a class="header" href="#overview"><a href="/#workspace/scalable-data-science/xtraResources/ProgGuides2_2/MLlibProgrammingGuide/000_MLlibProgGuide">Overview</a></a></h1>
-<h2 id="data-types---mllib-programming-guide"><a class="header" href="#data-types---mllib-programming-guide"><a href="/#workspace/scalable-data-science/xtraResources/ProgGuides2_2/MLlibProgrammingGuide/dataTypes/000_dataTypesProgGuide">Data Types - MLlib Programming Guide</a></a></h2>
-<ul>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#local-vector">Local vector</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#labeled-point">Labeled point</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#local-matrix">Local matrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#distributed-matrix">Distributed matrix</a>
-<ul>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#rowmatrix">RowMatrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#indexedrowmatrix">IndexedRowMatrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#coordinatematrix">CoordinateMatrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#blockmatrix">BlockMatrix</a></li>
-</ul>
-</li>
-</ul>
-<p>MLlib supports local vectors and matrices stored on a single machine, as well as distributed matrices backed by one or more RDDs. Local vectors and local matrices are simple data models that serve as public interfaces. The underlying linear algebra operations are provided by <a href="http://www.scalanlp.org/">Breeze</a> and <a href="http://jblas.org/">jblas</a>. A training example used in supervised learning is called a “labeled point” in MLlib.</p>
-</div>
-<div class="cell markdown">
-<h2 id="local-vector-in-scala"><a class="header" href="#local-vector-in-scala">Local vector in Scala</a></h2>
-<p>A local vector has integer-typed and 0-based indices and double-typed values, stored on a single machine.</p>
-<p>MLlib supports two types of local vectors:</p>
-<ul>
-<li>dense and</li>
-<li>sparse.</li>
-</ul>
-<p>A dense vector is backed by a double array representing its entry values, while a sparse vector is backed by two parallel arrays: indices and values.</p>
-<p>For example, a vector <code>(1.0, 0.0, 3.0)</code> can be represented:</p>
-<ul>
-<li>in dense format as <code>[1.0, 0.0, 3.0]</code> or</li>
-<li>in sparse format as <code>(3, [0, 2], [1.0, 3.0])</code>, where <code>3</code> is the size of the vector.</li>
-</ul>
-<p>The base class of local vectors is <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.Vector"><code>Vector</code></a>, and we provide two implementations: <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.DenseVector"><code>DenseVector</code></a> and <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.SparseVector"><code>SparseVector</code></a>. We recommend using the factory methods implemented in <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.Vectors$"><code>Vectors</code></a> to create local vectors. Refer to the <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.Vector"><code>Vector</code> Scala docs</a> and <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.Vectors$"><code>Vectors</code> Scala docs</a> for details on the API.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">import org.apache.spark.mllib.linalg.{Vector, Vectors}
-
-// Create a dense vector (1.0, 0.0, 3.0).
-val dv: Vector = Vectors.dense(1.0, 0.0, 3.0)
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>import org.apache.spark.mllib.linalg.{Vector, Vectors}
-dv: org.apache.spark.mllib.linalg.Vector = [1.0,0.0,3.0]
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">// Create a sparse vector (1.0, 0.0, 3.0) by specifying its indices and values corresponding to nonzero entries.
-val sv1: Vector = Vectors.sparse(3, Array(0, 2), Array(1.0, 3.0))
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>sv1: org.apache.spark.mllib.linalg.Vector = (3,[0,2],[1.0,3.0])
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">// Create a sparse vector (1.0, 0.0, 3.0) by specifying its nonzero entries.
-val sv2: Vector = Vectors.sparse(3, Seq((0, 1.0), (2, 3.0)))
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>sv2: org.apache.spark.mllib.linalg.Vector = (3,[0,2],[1.0,3.0])
-</code></pre>
-</div>
-</div>
-<div class="cell markdown">
-<p><em><strong>Note:</strong></em> Scala imports <code>scala.collection.immutable.Vector</code> by default, so you have to import <code>org.apache.spark.mllib.linalg.Vector</code> explicitly to use MLlib’s <code>Vector</code>.</p>
-</div>
-<div class="cell markdown">
-<hr />
-<hr />
-<h2 id="local-vector-in-python"><a class="header" href="#local-vector-in-python">Local Vector in Python</a></h2>
-</div>
-<div class="cell markdown">
-<p><strong>python</strong>: MLlib recognizes the following types as dense vectors:</p>
-<ul>
-<li>NumPy’s <a href="http://docs.scipy.org/doc/numpy/reference/generated/numpy.array.html"><code>array</code></a></li>
-<li>Python’s list, e.g., <code>[1, 2, 3]</code></li>
-</ul>
-<p>and the following as sparse vectors:</p>
-<ul>
-<li>MLlib’s <a href="http://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.linalg.SparseVector"><code>SparseVector</code></a>.</li>
-<li>SciPy’s <a href="http://docs.scipy.org/doc/scipy/reference/generated/scipy.sparse.csc_matrix.html#scipy.sparse.csc_matrix"><code>csc_matrix</code></a> with a single column</li>
-</ul>
-<p>We recommend using NumPy arrays over lists for efficiency, and using the factory methods implemented in <a href="http://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.linalg.Vectors"><code>Vectors</code></a> to create sparse vectors.</p>
-<p>Refer to the <a href="http://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.linalg.Vectors"><code>Vectors</code> Python docs</a> for more details on the API.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">import numpy as np
-import scipy.sparse as sps
-from pyspark.mllib.linalg import Vectors
-
-# Use a NumPy array as a dense vector.
-dv1 = np.array([1.0, 0.0, 3.0])
-# Use a Python list as a dense vector.
-dv2 = [1.0, 0.0, 3.0]
-# Create a SparseVector.
-sv1 = Vectors.sparse(3, [0, 2], [1.0, 3.0])
-# Use a single-column SciPy csc_matrix as a sparse vector.
-sv2 = sps.csc_matrix((np.array([1.0, 3.0]), np.array([0, 2]), np.array([0, 2])), shape = (3, 1))
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">print (dv1)
-print (dv2)
-print (sv1)
-print (sv2)
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>[1. 0. 3.]
-[1.0, 0.0, 3.0]
-(3,[0,2],[1.0,3.0])
-  (0, 0)	1.0
-  (2, 0)	3.0
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-</div>
+                        <h1 id="019x_001_localvector"><a class="header" href="#019x_001_localvector">019x_001_LocalVector</a></h1>
 
                     </main>
 
