--- a/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/019x_007_CoordinateMatrix.html
+++ b/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/019x_007_CoordinateMatrix.html
@@ -145,129 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-</div>
-<div class="cell markdown">
-<p>This is an elaboration of the <a href="http://spark.apache.org/docs/latest/mllib-data-types.html">Apache Spark mllib-progamming-guide on mllib-data-types</a>.</p>
-<h1 id="overview"><a class="header" href="#overview"><a href="/#workspace/scalable-data-science/xtraResources/ProgGuides2_2/MLlibProgrammingGuide/000_MLlibProgGuide">Overview</a></a></h1>
-<h2 id="data-types---mllib-programming-guide"><a class="header" href="#data-types---mllib-programming-guide"><a href="/#workspace/scalable-data-science/xtraResources/ProgGuides2_2/MLlibProgrammingGuide/dataTypes/000_dataTypesProgGuide">Data Types - MLlib Programming Guide</a></a></h2>
-<ul>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#local-vector">Local vector</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#labeled-point">Labeled point</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#local-matrix">Local matrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#distributed-matrix">Distributed matrix</a>
-<ul>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#rowmatrix">RowMatrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#indexedrowmatrix">IndexedRowMatrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#coordinatematrix">CoordinateMatrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#blockmatrix">BlockMatrix</a></li>
-</ul>
-</li>
-</ul>
-<p>MLlib supports local vectors and matrices stored on a single machine, as well as distributed matrices backed by one or more RDDs. Local vectors and local matrices are simple data models that serve as public interfaces. The underlying linear algebra operations are provided by <a href="http://www.scalanlp.org/">Breeze</a> and <a href="http://jblas.org/">jblas</a>. A training example used in supervised learning is called a “labeled point” in MLlib.</p>
-</div>
-<div class="cell markdown">
-<h3 id="coordinatematrix-in-scala"><a class="header" href="#coordinatematrix-in-scala">CoordinateMatrix in Scala</a></h3>
-<p>A <code>CoordinateMatrix</code> is a distributed matrix backed by an RDD of its entries. Each entry is a tuple of <code>(i: Long, j: Long, value: Double)</code>, where <code>i</code> is the row index, <code>j</code> is the column index, and <code>value</code> is the entry value. A <code>CoordinateMatrix</code> should be used only when both dimensions of the matrix are huge and the matrix is very sparse.</p>
-<p>A <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.distributed.CoordinateMatrix"><code>CoordinateMatrix</code></a> can be created from an <code>RDD[MatrixEntry]</code> instance, where <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.distributed.MatrixEntry"><code>MatrixEntry</code></a> is a wrapper over <code>(Long, Long, Double)</code>. A <code>CoordinateMatrix</code> can be converted to an <code>IndexedRowMatrix</code> with sparse rows by calling <code>toIndexedRowMatrix</code>. Other computations for <code>CoordinateMatrix</code> are not currently supported.</p>
-<p>Refer to the <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.distributed.CoordinateMatrix"><code>CoordinateMatrix</code> Scala docs</a> for details on the API.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">import org.apache.spark.mllib.linalg.distributed.{CoordinateMatrix, MatrixEntry}
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>import org.apache.spark.mllib.linalg.distributed.{CoordinateMatrix, MatrixEntry}
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">val entries: RDD[MatrixEntry] = sc.parallelize(Array(MatrixEntry(0, 0, 1.2), MatrixEntry(1, 0, 2.1), MatrixEntry(6, 1, 3.7))) // an RDD of matrix entries
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>entries: org.apache.spark.rdd.RDD[org.apache.spark.mllib.linalg.distributed.MatrixEntry] = ParallelCollectionRDD[3712] at parallelize at command-2972105651606627:1
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">// Create a CoordinateMatrix from an RDD[MatrixEntry].
-val mat: CoordinateMatrix = new CoordinateMatrix(entries)
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>mat: org.apache.spark.mllib.linalg.distributed.CoordinateMatrix = org.apache.spark.mllib.linalg.distributed.CoordinateMatrix@56954954
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">// Get its size.
-val m = mat.numRows()
-val n = mat.numCols()
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>m: Long = 7
-n: Long = 2
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">// Convert it to an IndexRowMatrix whose rows are sparse vectors.
-val indexedRowMatrix = mat.toIndexedRowMatrix()
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>indexedRowMatrix: org.apache.spark.mllib.linalg.distributed.IndexedRowMatrix = org.apache.spark.mllib.linalg.distributed.IndexedRowMatrix@45570b82
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">indexedRowMatrix.rows.collect()
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>res0: Array[org.apache.spark.mllib.linalg.distributed.IndexedRow] = Array(IndexedRow(0,(2,[0],[1.2])), IndexedRow(1,(2,[0],[2.1])), IndexedRow(6,(2,[1],[3.7])))
-</code></pre>
-</div>
-</div>
-<div class="cell markdown">
-<h3 id="coordinatematrix-in-scala-1"><a class="header" href="#coordinatematrix-in-scala-1">CoordinateMatrix in Scala</a></h3>
-<p>A <a href="http://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.linalg.distributed.CoordinateMatrix"><code>CoordinateMatrix</code></a> can be created from an <code>RDD</code> of <code>MatrixEntry</code> entries, where <a href="http://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.linalg.distributed.MatrixEntry"><code>MatrixEntry</code></a> is a wrapper over <code>(long, long, float)</code>. A <code>CoordinateMatrix</code> can be converted to a <code>RowMatrix</code> by calling <code>toRowMatrix</code>, or to an <code>IndexedRowMatrix</code> with sparse rows by calling <code>toIndexedRowMatrix</code>.</p>
-<p>Refer to the <a href="http://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.linalg.distributed.CoordinateMatrix"><code>CoordinateMatrix</code> Python docs</a> for more details on the API.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">from pyspark.mllib.linalg.distributed import CoordinateMatrix, MatrixEntry
-
-# Create an RDD of coordinate entries.
-#   - This can be done explicitly with the MatrixEntry class:
-entries = sc.parallelize([MatrixEntry(0, 0, 1.2), MatrixEntry(1, 0, 2.1), MatrixEntry(6, 1, 3.7)])
-
-#   - or using (long, long, float) tuples:
-entries = sc.parallelize([(0, 0, 1.2), (1, 0, 2.1), (2, 1, 3.7)])
-
-# Create an CoordinateMatrix from an RDD of MatrixEntries.
-mat = CoordinateMatrix(entries)
-
-# Get its size.
-m = mat.numRows()  # 3
-n = mat.numCols()  # 2
-print (m,n)
-
-# Get the entries as an RDD of MatrixEntries.
-entriesRDD = mat.entries
-
-# Convert to a RowMatrix.
-rowMat = mat.toRowMatrix()
-
-# Convert to an IndexedRowMatrix.
-indexedRowMat = mat.toIndexedRowMatrix()
-
-# Convert to a BlockMatrix.
-blockMat = mat.toBlockMatrix()
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>3 2
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-</div>
+                        <h1 id="019x_007_coordinatematrix"><a class="header" href="#019x_007_coordinatematrix">019x_007_CoordinateMatrix</a></h1>
 
                     </main>
 
