--- a/000_6-sds-3-x-dl/contents/000_6-sds-3-x-dl/050_DLbyABr_01-Intro.html
+++ b/000_6-sds-3-x-dl/contents/000_6-sds-3-x-dl/050_DLbyABr_01-Intro.html
@@ -145,194 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-<p>This is a 2019-2021 augmentation and update of <a href="https://www.linkedin.com/in/adbreind">Adam Breindel</a>'s initial notebooks.</p>
-<p><em>Thanks to <a href="https://www.linkedin.com/in/christianvonkoch/">Christian von Koch</a> and <a href="https://www.linkedin.com/in/william-anz%C3%A9n-b52003199/">William Anzén</a> for their contributions towards making these materials Spark 3.0.1 and Python 3+ compliant.</em></p>
-</div>
-<div class="cell markdown">
-<h1 id="introduction-to-deep-learning"><a class="header" href="#introduction-to-deep-learning">Introduction to Deep Learning</a></h1>
-<h2 id="theory-and-practice-with-tensorflow-and-keras"><a class="header" href="#theory-and-practice-with-tensorflow-and-keras">Theory and Practice with TensorFlow and Keras</a></h2>
-<img src="http://i.imgur.com/Gk8rv2Z.jpg" width=700>
-<p>https://arxiv.org/abs/1508.06576<br/> <em>by the end of this course, this paper and project will be accessible to you!</em></p>
-</div>
-<div class="cell markdown">
-<h3 id="schedule"><a class="header" href="#schedule">Schedule</a></h3>
-<ul>
-<li>Intro</li>
-<li>TensorFlow Basics</li>
-<li>Artificial Neural Networks</li>
-<li>Multilayer (&quot;Deep&quot;) Feed-Forward Networks</li>
-<li>Training Neural Nets</li>
-<li>Convolutional Networks</li>
-<li>Recurrent Nets, LSTM, GRU</li>
-<li>Generative Networks / Patterns</li>
-<li>Intro to Reinforcement Learning</li>
-<li>Operations in the Real World</li>
-</ul>
-<h3 id="instructor-adam-breindel"><a class="header" href="#instructor-adam-breindel">Instructor: Adam Breindel</a></h3>
-<img src="http://i.imgur.com/lpMDU9j.jpg" width=200 align=left style="margin-right:2em;margin-top:1em">
-<h4 id="contact-httpswwwlinkedincominadbreind---adbreindgmailcom"><a class="header" href="#contact-httpswwwlinkedincominadbreind---adbreindgmailcom">Contact: https://www.linkedin.com/in/adbreind - adbreind@gmail.com</a></h4>
-<ul>
-<li>Almost 20 years building systems for startups and large enterprises</li>
-<li>10 years teaching front- and back-end technology</li>
-</ul>
-<h4 id="interesting-projects"><a class="header" href="#interesting-projects">Interesting projects...</a></h4>
-<ul>
-<li>My first full-time job in tech involved streaming neural net fraud scoring (debit cards)</li>
-<li>Realtime &amp; offline analytics for banking</li>
-<li>Music synchronization and licensing for networked jukeboxes</li>
-</ul>
-<h4 id="industries"><a class="header" href="#industries">Industries</a></h4>
-<ul>
-<li>Finance / Insurance, Travel, Media / Entertainment, Government</li>
-</ul>
-</div>
-<div class="cell markdown">
-<h3 id="class-goals"><a class="header" href="#class-goals">Class Goals</a></h3>
-<ul>
-<li>Understand deep learning!
-<ul>
-<li>Acquire an intiution and feeling for how and why and when it works, so you can use it!</li>
-<li>No magic! (or at least very little magic)</li>
-</ul>
-</li>
-<li>We <em>don't</em> want to have a workshop where we install and demo some magical, fairly complicated thing, and we watch it do something awesome, and handwave, and go home
-<ul>
-<li>That's great for generating excitement, but leaves
-<ul>
-<li>Theoretical mysteries -- what's going on? do I need a Ph.D. in Math or Statistics to do this?</li>
-<li>Practical problems -- I have 10 lines of code but they never run because my tensor is the wrong shape!</li>
-</ul>
-</li>
-</ul>
-</li>
-<li>We'll focus on TensorFlow and Keras
-<ul>
-<li>But 95% should be knowledge you can use with frameworks too: Intel BigDL, Baidu PaddlePaddle, NVIDIA Digits, MXNet, etc.</li>
-</ul>
-</li>
-</ul>
-</div>
-<div class="cell markdown">
-<h2 id="deep-learning-is-about-machines-finding-patterns-and-solving-problems"><a class="header" href="#deep-learning-is-about-machines-finding-patterns-and-solving-problems">Deep Learning is About Machines Finding Patterns and Solving Problems</a></h2>
-<p>So let's start by diving right in and discussing an interesing problem:</p>
-</div>
-<div class="cell markdown">
-<h2 id="mnist-digits-dataset"><a class="header" href="#mnist-digits-dataset">MNIST Digits Dataset</a></h2>
-<h3 id="mixed-national-institute-of-standards-and-technology"><a class="header" href="#mixed-national-institute-of-standards-and-technology">Mixed National Institute of Standards and Technology</a></h3>
-<h4 id="called-the-drosophila-of-machine-learning"><a class="header" href="#called-the-drosophila-of-machine-learning">Called the &quot;Drosophila&quot; of Machine Learning</a></h4>
-<p>Likely the most common single dataset out there in deep learning, just complex enough to be interesting and useful for benchmarks.</p>
-<p>&quot;If your code works on MNIST, that doesn't mean it will work everywhere; but if it doesn't work on MNIST, it probably won't work anywhere&quot; :)</p>
-<img src="http://i.imgur.com/uggRlE7.png" width=600>
-</div>
-<div class="cell markdown">
-<h3 id="what-is-the-goal"><a class="header" href="#what-is-the-goal">What is the goal?</a></h3>
-<p>Convert an image of a handwritten character into the correct classification (i.e., which character is it?)</p>
-<p>This is nearly trivial for a human to do! Most toddlers can do this with near 100% accuracy, even though they may not be able to count beyond 10 or perform addition.</p>
-<p>Traditionally this had been quite a hard task for a computer to do. 99% was not achieved until ~1998. Consistent, easy success at that level was not until 2003 or so.</p>
-</div>
-<div class="cell markdown">
-<h4 id="lets-describe-the-specific-problem-in-a-little-more-detail"><a class="header" href="#lets-describe-the-specific-problem-in-a-little-more-detail">Let's describe the specific problem in a little more detail</a></h4>
-<ul>
-<li>
-<p>Each image is a 28x28 pixel image</p>
-<ul>
-<li>originally monochrome; smoothed to gray; typically inverted, so that &quot;blank&quot; pixels are black (zeros)</li>
-</ul>
-</li>
-<li>
-<p>So the <strong>predictors</strong> are 784 (28 * 28 = 784) values, ranging from 0 (black / no ink when inverted) to 255 (white / full ink when inverted)</p>
-</li>
-<li>
-<p>The <strong>response</strong> -- what we're trying to predict -- is the number that the image represents</p>
-<ul>
-<li>the response is a value from 0 to 9</li>
-<li>since there are a small number of discrete catagories for the responses, this is a <strong>classification</strong> problem, not a <strong>regression</strong> problem</li>
-<li>there are 10 classes</li>
-</ul>
-</li>
-<li>
-<p>We have, for each data record, predictors and a response to train against, so this is a <strong>supervised</strong> learning task</p>
-</li>
-<li>
-<p>The dataset happens to come partitioned into a <strong>training set</strong> (60,000 records) and a <strong>test set</strong> (10,000 records)</p>
-<ul>
-<li>We'll &quot;hold out&quot; the test set and not train on it</li>
-</ul>
-</li>
-<li>
-<p>Once our model is trained, we'll use it to <strong>predict</strong> (or perform <strong>inference</strong>) on the test records, and see how well our trained model performs on unseen test data</p>
-<ul>
-<li>We might want to further split the training set into a <strong>validation set</strong> or even several <strong>K-fold partitions</strong> to evaluate as we go</li>
-</ul>
-</li>
-<li>
-<p>As humans, we'll probably measure our success by using <strong>accuracy</strong> as a metric: What fraction of the examples are correctly classified by the model?</p>
-<ul>
-<li>However, for training, it makes more sense to use <strong>cross-entropy</strong> to measure, correct, and improve the model. Cross-entropy has the advantage that instead of just counting &quot;right or wrong&quot; answers, it provides a continuous measure of &quot;how wrong (or right)&quot; an answer is. For example, if the correct answer is &quot;1&quot; then the answer &quot;probably a 7, maybe a 1&quot; is wrong, but <em>less wrong</em> than the answer &quot;definitely a 7&quot;</li>
-</ul>
-</li>
-<li>
-<p>Do we need to pre-process the data? Depending on the model we use, we may want to ...</p>
-<ul>
-<li><strong>Scale</strong> the values, so that they range from 0 to 1, or so that they measure in standard deviations</li>
-<li><strong>Center</strong> the values so that 0 corresponds to the (raw central) value 127.5, or so that 0 corresponds to the mean</li>
-</ul>
-</li>
-</ul>
-</div>
-<div class="cell markdown">
-<h4 id="what-might-be-characteristics-of-a-good-solution"><a class="header" href="#what-might-be-characteristics-of-a-good-solution">What might be characteristics of a good solution?</a></h4>
-<ul>
-<li>As always, we need to balance <strong>variance</strong> (malleability of the model in the face of variation in the sample training data) and <strong>bias</strong> (strength/inflexibility of assumptions built in to the modeling method)</li>
-<li>We a model with a good amount of <strong>capacity</strong> to represent different patterns in the training data (e.g., different handwriting styles) while not <strong>overfitting</strong> and learning too much about specific training instances</li>
-<li>We'd like a <strong>probabalistic model</strong> that tells us the most likely classes given the data and assumptions (for example, in the U.S., a one is often written with a vertical stroke, whereas in Germany it's usually written with 2 strokes, closer to a U.S. 7)</li>
-</ul>
-<p>Going a little further,</p>
-<ul>
-<li>an ideal modeling approach might perform <strong>feature selection</strong> on its own deciding which pixels and combinations of pixels are most informative</li>
-<li>in order to be robust to varying data, a good model might learn <strong>hierarchical or abstract features</strong> like lines, angles, curves and loops that we as humans use to teach, learn, and distinguish Arabic numerals from each other</li>
-<li>it would be nice to add some basic <strong>domain knowledge</strong> like these features aren't arbitrary slots in a vector, but are parts of a 2-dimensional image where the contents are roughly <strong>axis-aligned</strong> and <strong>translation invariant</strong> -- after all, a &quot;7&quot; is still a &quot;7&quot; even if we move it around a bit on the page</li>
-</ul>
-<p>Lastly, it would be great to have a framework that is flexible enough to adapt to similar tasks -- say, Greek, Cyrillic, or Chinese handwritten characters, not just digits.</p>
-</div>
-<div class="cell markdown">
-<h4 id="lets-compare-some-modeling-techniques"><a class="header" href="#lets-compare-some-modeling-techniques">Let's compare some modeling techniques...</a></h4>
-<h5 id="decision-tree"><a class="header" href="#decision-tree">Decision Tree</a></h5>
-<p>👍 High capacity</p>
-<p>👎 Can be hard to generalize; prone to overfit; fragile for this kind of task</p>
-<p>👎 Dedicated training algorithm (traditional approach is not directly a gradient-descent optimization problem)</p>
-<p>👍 Performs feature selection / PCA implicitly</p>
-<h5 id="multiclass-logistic-regression"><a class="header" href="#multiclass-logistic-regression">(Multiclass) Logistic Regression</a></h5>
-<p>👎 Low capacity/variance -&gt; High bias</p>
-<p>👍 Less overfitting</p>
-<p>👎 Less fitting (accuracy)</p>
-<img src="http://i.imgur.com/1x80BDA.png" width=400>
-<h5 id="kernelized-support-vector-machine-eg-rbf"><a class="header" href="#kernelized-support-vector-machine-eg-rbf">Kernelized Support Vector Machine (e.g., RBF)</a></h5>
-<p>👍 Robust capacity, good bias-variance balance</p>
-<p>👎 Expensive to scale in terms of features or instances</p>
-<p>👍 Amenable to &quot;online&quot; learning (http://www.isn.ucsd.edu/papers/nips00_inc.pdf)</p>
-<p>👍 State of the art for MNIST prior to the widespread use of deep learning!</p>
-</div>
-<div class="cell markdown">
-<h3 id="deep-learning"><a class="header" href="#deep-learning">Deep Learning</a></h3>
-<p>It turns out that a model called a convolutional neural network meets all of our goals and can be trained to human-level accuracy on this task in just a few minutes. We will solve MNIST with this sort of model today.</p>
-<p>But we will build up to it starting with the simplest neural model.</p>
-</div>
-<div class="cell markdown">
-<p><strong>Mathematical statistical caveat</strong>: Note that ML algorithmic performance measures such as 99% or 99.99% as well as their justification by comparisons to &quot;typical&quot; human performance measures from a randomised surveyable population actually often make significant mathematical assumptions that may be violated <em>under the carpet</em>. Some concrete examples include, the size and nature of the training data and their generalizability to live decision problems based on empirical risk minisation principles like cross-validation. These assumpitons are usually harmless and can be time-saving for most problems like recommending songs in Spotify or shoes in Amazon. It is important to bear in mind that there are problems that should guarantee <em>worst case scenario avoidance</em>, like accidents with self-driving cars or global extinction event cause by mathematically ambiguous assumptions in the learning algorithms of say near-Earth-Asteroid mining artificially intelligent robots!</p>
-</div>
-<div class="cell markdown">
-<p>Installations (PyPI rules)</p>
-<ul>
-<li>tensorflow==1.13.1 (worked also on 1.3.0)</li>
-<li>keras==2.2.4 (worked also on 2.0.6)</li>
-<li>dist-keras==0.2.1 (worked also on 0.2.0) Python 3.0 compatible. So make sure cluster has Python 3.0</li>
-</ul>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-</div>
+                        <h1 id="050_dlbyabr_01-intro"><a class="header" href="#050_dlbyabr_01-intro">050_DLbyABr_01-Intro</a></h1>
 
                     </main>
 
