--- a/000_6-sds-3-x-dl/contents/000_6-sds-3-x-dl/054_DLbyABr_03a-BatchTensorFlowWithMatrices.html
+++ b/000_6-sds-3-x-dl/contents/000_6-sds-3-x-dl/054_DLbyABr_03a-BatchTensorFlowWithMatrices.html
@@ -145,133 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-<p>This is a 2019-2021 augmentation and update of <a href="https://www.linkedin.com/in/adbreind">Adam Breindel</a>'s initial notebooks.</p>
-<p><em>Thanks to <a href="https://www.linkedin.com/in/christianvonkoch/">Christian von Koch</a> and <a href="https://www.linkedin.com/in/william-anz%C3%A9n-b52003199/">William Anzén</a> for their contributions towards making these materials Spark 3.0.1 and Python 3+ compliant.</em></p>
-</div>
-<div class="cell markdown">
-<h4 id="we-can-also-implement-the-model-with-mini-batches----this-will-let-us-see-matrix-ops-in-action"><a class="header" href="#we-can-also-implement-the-model-with-mini-batches----this-will-let-us-see-matrix-ops-in-action">We can also implement the model with mini-batches -- this will let us see matrix ops in action:</a></h4>
-<p>(N.b., feed<em>dict is intended for small data / experimentation. For more info on ingesting data at scale, see https://www.tensorflow.org/api</em>guides/python/reading_data)</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python"># we know these params, but we're making TF learn them
-
-REAL_SLOPE_X1 = 2 # slope along axis 1 (x-axis)
-REAL_SLOPE_X2 = 3 # slope along axis 2 (y-axis)
-REAL_INTERCEPT = 5 # intercept along axis 3 (z-axis), think of (x,y,z) axes in the usual way
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">import numpy as np
-# GENERATE a batch of true data, with a little Gaussian noise added
-
-def make_mini_batch(size=10):
-  X = np.random.rand(size, 2) # 
-  Y = np.matmul(X, [REAL_SLOPE_X1, REAL_SLOPE_X2]) + REAL_INTERCEPT + 0.2 * np.random.randn(size) 
-  return X.reshape(size,2), Y.reshape(size,1)
-</code></pre>
-</div>
-<div class="cell markdown">
-<p>To digest what's going on inside the function above, let's take it step by step.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python"> Xex = np.random.rand(10, 2) # Xex is simulating PRNGs from independent Uniform [0,1] RVs
- Xex # visualize these as 10 orddered pairs of points in the x-y plane that makes up our x-axis and y-axis (or x1 and x2 axes)
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">Yex = np.matmul(Xex, [REAL_SLOPE_X1, REAL_SLOPE_X2]) #+ REAL_INTERCEPT #+ 0.2 * np.random.randn(10) 
-Yex
-</code></pre>
-</div>
-<div class="cell markdown">
-<p>The first entry in Yex is obtained as follows (change the numbers in the produc below if you reevaluated the cells above) and geometrically it is the location in z-axis of the plane with slopes given by REAL<em>SLOPE</em>X1 in the x-axis and REAL<em>SLOPE</em>X2 in the y-aixs with intercept 0 at the point in the x-y or x1-x2 plane given by (0.68729439, 0.58462379).</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">0.21757443*REAL_SLOPE_X1 +  0.01815727*REAL_SLOPE_X2 
-</code></pre>
-</div>
-<div class="cell markdown">
-<p>The next steps are adding an intercept term to translate the plane in the z-axis and then a scaled (the multiplication by 0.2 here) gaussian noise from independetly drawn pseudo-random samples from the standard normal or Normal(0,1) random variable via <code>np.random.randn(size)</code>.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">Yex = np.matmul(Xex, [REAL_SLOPE_X1, REAL_SLOPE_X2]) + REAL_INTERCEPT # + 0.2 * np.random.randn(10) 
-Yex
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">Yex = np.matmul(Xex, [REAL_SLOPE_X1, REAL_SLOPE_X2])  + REAL_INTERCEPT + 0.2 * np.random.randn(10) 
-Yex # note how each entry in Yex is jiggled independently a bit by 0.2 * np.random.randn()
-</code></pre>
-</div>
-<div class="cell markdown">
-<p>Thus we can now fully appreciate what is going on in <code>make_mini_batch</code>. This is meant to substitute for pulling random sub-samples of batches of the real data during stochastic gradient descent.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">make_mini_batch() # our mini-batch of Xx and Ys
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">import tensorflow as tf
-
-
-batch = 10 # size of batch
-
-tf.reset_default_graph() # this is important to do before you do something new in TF
-
-# we will work with single floating point precision and this is specified in the tf.float32 type argument to each tf object/method
-x = tf.placeholder(tf.float32, shape=(batch, 2)) # placeholder node for the pairs of x variables (predictors) in batches of size batch
-x_aug = tf.concat( (x, tf.ones((batch, 1))), 1 ) # x_aug is a concatenation of a vector of 1`s along the first dimension
-
-y = tf.placeholder(tf.float32, shape=(batch, 1)) # placeholder node for the univariate response y with batch many rows and 1 column
-model_params = tf.get_variable(&quot;model_params&quot;, [3,1]) # these are the x1 slope, x2 slope and the intercept (3 rows and 1 column)
-y_model = tf.matmul(x_aug, model_params) # our two-factor regression model is defined by this matrix multiplication
-# note that the noise is formally part of the model and what we are actually modeling is the mean response...
-
-error = tf.reduce_sum(tf.square(y - y_model))/batch # this is mean square error where the sum is computed by a reduce call on addition
-
-train_op = tf.train.GradientDescentOptimizer(0.02).minimize(error) # learning rate is set to 0.02
-
-init = tf.global_variables_initializer() # our way into running the TF session
-
-errors = [] # list to track errors over iterations
-
-with tf.Session() as session:
-    session.run(init)    
-    for i in range(1000):
-      x_data, y_data = make_mini_batch(batch) # simulate the mini-batch of data x1,x2 and response y with noise
-      _, error_val = session.run([train_op, error], feed_dict={x: x_data, y: y_data})
-      errors.append(error_val)
-
-    out = session.run(model_params)
-    print(out)
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>WARNING:tensorflow:From /databricks/python/lib/python3.7/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.
-Instructions for updating:
-Colocations handled automatically by placer.
-[[2.0491152]
- [3.0319374]
- [4.961138 ]]
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">REAL_SLOPE_X1, REAL_SLOPE_X2, REAL_INTERCEPT # compare with rue parameter values - it's not too far from the estimates
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">import matplotlib.pyplot as plt
-
-fig, ax = plt.subplots()
-fig.set_size_inches((4,3))
-plt.plot(errors)
-display(fig)
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-</div>
+                        <h1 id="054_dlbyabr_03a-batchtensorflowwithmatrices"><a class="header" href="#054_dlbyabr_03a-batchtensorflowwithmatrices">054_DLbyABr_03a-BatchTensorFlowWithMatrices</a></h1>
 
                     </main>
 
