--- a/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/019_DistLAlgForLinRegIntro.html
+++ b/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/019_DistLAlgForLinRegIntro.html
@@ -145,103 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-</div>
-<div class="cell markdown">
-<h2 id="a-more-detailed-deep-dive"><a class="header" href="#a-more-detailed-deep-dive">A more detailed deep dive</a></h2>
-<p>We will mostly be using ML algorithms already implemented in Spark's libraries and packages.</p>
-<p>However, in order to innovate and devise new algorithms, we need to understand more about distributed linear algebra and optimisation algorithms.</p>
-<ul>
-<li>read: <a href="http://arxiv.org/pdf/1509.02256.pdf">http://arxiv.org/pdf/1509.02256.pdf</a> (also see References and Appendix A).</li>
-<li>and go through the notebooks prepended by '19x' on various Data Types for distributed linear algebra.</li>
-</ul>
-<p>You may want to follow this course from Stanford for a guided deeper dive. * <a href="http://stanford.edu/%7Erezab/dao/">http://stanford.edu/~rezab/dao/</a> * see notes here: <a href="https://github.com/lamastex/scalable-data-science/blob/master/read/daosu.pdf">https://github.com/lamastex/scalable-data-science/blob/master/read/daosu.pdf</a></p>
-</div>
-<div class="cell markdown">
-<h4 id="communication-hierarchy"><a class="header" href="#communication-hierarchy">Communication Hierarchy</a></h4>
-<p>In addition to time and space complexity of an algorithm, in the distributed setting, we also need to take care of communication complexity.</p>
-<p><strong>Access rates fall sharply with distance.</strong></p>
-<ul>
-<li>roughly 50 x gap between reading from memory and reading from either disk or the network.</li>
-</ul>
-<p>We must take this communication hierarchy into consideration when developing parallel and distributed algorithms.</p>
-</div>
-<div class="cell markdown">
-<h4 id="focusing-on-strategies-to-reduce-communication-costs"><a class="header" href="#focusing-on-strategies-to-reduce-communication-costs">Focusing on strategies to reduce communication costs.</a></h4>
-<ul>
-<li>access rates fall sharply with distance.</li>
-<li>so this communication hierarchy needs to be accounted for when developing parallel and distributed algorithms.</li>
-</ul>
-<p><strong>Lessons:</strong></p>
-<ul>
-<li>
-<p>parallelism makes our computation faster</p>
-</li>
-<li>
-<p>but network communication slows us down</p>
-</li>
-<li>
-<p>SOLUTION: perform parallel and in-memory computation.</p>
-</li>
-<li>
-<p>Persisting in memory is a particularly attractive option when working with iterative algorithms that read the same data multiple times, as is the case in gradient descent.</p>
-</li>
-<li>
-<p>Several machine learning algorithms are iterative!</p>
-</li>
-<li>
-<p>Limits of multi-core scaling (powerful multicore machine with several CPUs, and a huge amount of RAM).</p>
-<ul>
-<li>advantageous:
-<ul>
-<li>sidestep any network communication when working with a single multicore machine</li>
-<li>can indeed handle fairly large data sets, and they're an attractive option in many settings.</li>
-</ul>
-</li>
-<li>disadvantages:
-<ul>
-<li>can be quite expensive (due to specialized hardware),</li>
-<li>not as widely accessible as commodity computing nodes.</li>
-<li>this approach does have scalability limitations, as we'll eventually hit a wall when the data grows large enough! This is not the case for a distributed environment (like the AWS EC2 cloud under the hood here).</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-<h4 id="simple-strategies-for-algorithms-in-a-distributed-setting-to-reduce-network-communication-simply-keep-large-objects-local"><a class="header" href="#simple-strategies-for-algorithms-in-a-distributed-setting-to-reduce-network-communication-simply-keep-large-objects-local">Simple strategies for algorithms in a distributed setting: to reduce network communication, simply keep large objects local</a></h4>
-<ul>
-<li>In the big n, small d case for linear regression
-<ul>
-<li>we can solve the problem via a closed form solution.</li>
-<li>And this requires us to communicate \(O(d)^2\) intermediate data.</li>
-<li>the largest object in this example is our initial data, which we store in a distributed fashion and never communicate! This is a <em>data parallel setting</em>.</li>
-</ul>
-</li>
-<li>In the big n, big d case (n is the sample size and d is the number of features):
-<ul>
-<li>for linear regression.
-<ul>
-<li>we use gradient descent to iteratively train our model and are again in a data parallel setting.</li>
-<li>At each iteration we communicate the current parameter vector \(w_i\) and the required \(O(d)\) communication is feasible even for fairly large d.</li>
-</ul>
-</li>
-</ul>
-</li>
-<li>In the small n, small d case:
-<ul>
-<li>for ridge regression.
-<ul>
-<li>we can communicate the small data to all of the workers.</li>
-<li>this is an example of a model parallel setting where we can train the model for each hyper-parameter in parallel.</li>
-</ul>
-</li>
-</ul>
-</li>
-<li>Linear regression with big n and huge d is an example of both data and model parallelism.</li>
-</ul>
-<p>In this setting, since our data is large, we must still store it across multiple machines. We can still use gradient descent, or stochastic variants of gradient descent to train our model, but we may not want to communicate the entire d dimensional parameter vector at each iteration, when we have 10s, or hundreds of millions of features. In this setting we often rely on sparsity to reduce the communication. So far we discussed how we can reduce communication by keeping large data local.</p>
-</div>
+                        <h1 id="019_distlalgforlinregintro"><a class="header" href="#019_distlalgforlinregintro">019_DistLAlgForLinRegIntro</a></h1>
 
                     </main>
 
