--- a/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/019x_003_LocalMatrix.html
+++ b/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/019x_003_LocalMatrix.html
@@ -145,99 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-</div>
-<div class="cell markdown">
-<p>This is an elaboration of the <a href="http://spark.apache.org/docs/latest/mllib-data-types.html">Apache Spark mllib-progamming-guide on mllib-data-types</a>.</p>
-<h1 id="overview"><a class="header" href="#overview"><a href="/#workspace/scalable-data-science/xtraResources/ProgGuides2_2/MLlibProgrammingGuide/000_MLlibProgGuide">Overview</a></a></h1>
-<h2 id="data-types---mllib-programming-guide"><a class="header" href="#data-types---mllib-programming-guide"><a href="/#workspace/scalable-data-science/xtraResources/ProgGuides2_2/MLlibProgrammingGuide/dataTypes/000_dataTypesProgGuide">Data Types - MLlib Programming Guide</a></a></h2>
-<ul>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#local-vector">Local vector</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#labeled-point">Labeled point</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#local-matrix">Local matrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#distributed-matrix">Distributed matrix</a>
-<ul>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#rowmatrix">RowMatrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#indexedrowmatrix">IndexedRowMatrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#coordinatematrix">CoordinateMatrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#blockmatrix">BlockMatrix</a></li>
-</ul>
-</li>
-</ul>
-<p>MLlib supports local vectors and matrices stored on a single machine, as well as distributed matrices backed by one or more RDDs. Local vectors and local matrices are simple data models that serve as public interfaces. The underlying linear algebra operations are provided by <a href="http://www.scalanlp.org/">Breeze</a> and <a href="http://jblas.org/">jblas</a>. A training example used in supervised learning is called a “labeled point” in MLlib.</p>
-</div>
-<div class="cell markdown">
-<h2 id="local-matrix-in-scala"><a class="header" href="#local-matrix-in-scala">Local Matrix in Scala</a></h2>
-<p>A local matrix has integer-typed row and column indices and double-typed values, <strong>stored on a single machine</strong>. MLlib supports:</p>
-<ul>
-<li>dense matrices, whose entry values are stored in a single double array in column-major order, and</li>
-<li>sparse matrices, whose non-zero entry values are stored in the Compressed Sparse Column (CSC) format in column-major order.</li>
-</ul>
-<p>For example, the following dense matrix: \[ \begin{pmatrix} 1.0 &amp; 2.0 \\ 3.0 &amp; 4.0 \\ 5.0 &amp; 6.0 \end{pmatrix} \] is stored in a one-dimensional array <code>[1.0, 3.0, 5.0, 2.0, 4.0, 6.0]</code> with the matrix size <code>(3, 2)</code>.</p>
-<p>The base class of local matrices is <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.Matrix"><code>Matrix</code></a>, and we provide two implementations: <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.DenseMatrix"><code>DenseMatrix</code></a>, and <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.SparseMatrix"><code>SparseMatrix</code></a>. We recommend using the factory methods implemented in <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.Matrices$"><code>Matrices</code></a> to create local matrices. Remember, local matrices in MLlib are stored in column-major order.</p>
-<p>Refer to the <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.Matrix"><code>Matrix</code> Scala docs</a> and <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.Matrices"><code>Matrices</code> Scala docs</a> for details on the API.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">Int.MaxValue // note the largest value an index can take
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>res0: Int = 2147483647
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">import org.apache.spark.mllib.linalg.{Matrix, Matrices}
-
-// Create a dense matrix ((1.0, 2.0), (3.0, 4.0), (5.0, 6.0))
-val dm: Matrix = Matrices.dense(3, 2, Array(1.0, 3.0, 5.0, 2.0, 4.0, 6.0))
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>import org.apache.spark.mllib.linalg.{Matrix, Matrices}
-dm: org.apache.spark.mllib.linalg.Matrix =
-1.0  2.0
-3.0  4.0
-5.0  6.0
-</code></pre>
-</div>
-</div>
-<div class="cell markdown">
-<p>Next, let us create the following sparse local matrix: \[ \begin{pmatrix} 9.0 &amp; 0.0 \\ 0.0 &amp; 8.0 \\ 0.0 &amp; 6.0 \end{pmatrix} \]</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">// Create a sparse matrix ((9.0, 0.0), (0.0, 8.0), (0.0, 6.0))
-val sm: Matrix = Matrices.sparse(3, 2, Array(0, 1, 3), Array(0, 2, 1), Array(9, 6, 8))
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>sm: org.apache.spark.mllib.linalg.Matrix =
-3 x 2 CSCMatrix
-(0,0) 9.0
-(2,1) 6.0
-(1,1) 8.0
-</code></pre>
-</div>
-</div>
-<div class="cell markdown">
-<h2 id="local-matrix-in-python"><a class="header" href="#local-matrix-in-python">Local Matrix in Python</a></h2>
-<p>The base class of local matrices is <a href="http://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.linalg.Matrix"><code>Matrix</code></a>, and we provide two implementations: <a href="http://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.linalg.DenseMatrix"><code>DenseMatrix</code></a>, and <a href="http://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.linalg.SparseMatrix"><code>SparseMatrix</code></a>. We recommend using the factory methods implemented in <a href="http://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.linalg.Matrices"><code>Matrices</code></a> to create local matrices. Remember, local matrices in MLlib are stored in column-major order.</p>
-<p>Refer to the <a href="http://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.linalg.Matrix"><code>Matrix</code> Python docs</a> and <a href="http://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.linalg.Matrices"><code>Matrices</code> Python docs</a> for more details on the API.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">from pyspark.mllib.linalg import Matrix, Matrices
-
-# Create a dense matrix ((1.0, 2.0), (3.0, 4.0), (5.0, 6.0))
-dm2 = Matrices.dense(3, 2, [1, 2, 3, 4, 5, 6])
-dm2
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python"># Create a sparse matrix ((9.0, 0.0), (0.0, 8.0), (0.0, 6.0))
-sm = Matrices.sparse(3, 2, [0, 1, 3], [0, 2, 1], [9, 6, 8])
-sm
-</code></pre>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-</div>
+                        <h1 id="019x_003_localmatrix"><a class="header" href="#019x_003_localmatrix">019x_003_LocalMatrix</a></h1>
 
                     </main>
 
