--- a/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/019x_005_RowMatrix.html
+++ b/000_2-sds-3-x-ml/contents/000_2-sds-3-x-ml/019x_005_RowMatrix.html
@@ -145,138 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-</div>
-<div class="cell markdown">
-<p>This is an elaboration of the <a href="http://spark.apache.org/docs/latest/mllib-data-types.html">Apache Spark mllib-progamming-guide on mllib-data-types</a>.</p>
-<h1 id="overview"><a class="header" href="#overview"><a href="/#workspace/scalable-data-science/xtraResources/ProgGuides2_2/MLlibProgrammingGuide/000_MLlibProgGuide">Overview</a></a></h1>
-<h2 id="data-types---mllib-programming-guide"><a class="header" href="#data-types---mllib-programming-guide"><a href="/#workspace/scalable-data-science/xtraResources/ProgGuides2_2/MLlibProgrammingGuide/dataTypes/000_dataTypesProgGuide">Data Types - MLlib Programming Guide</a></a></h2>
-<ul>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#local-vector">Local vector</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#labeled-point">Labeled point</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#local-matrix">Local matrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#distributed-matrix">Distributed matrix</a>
-<ul>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#rowmatrix">RowMatrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#indexedrowmatrix">IndexedRowMatrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#coordinatematrix">CoordinateMatrix</a></li>
-<li><a href="http://spark.apache.org/docs/latest/mllib-data-types.html#blockmatrix">BlockMatrix</a></li>
-</ul>
-</li>
-</ul>
-<p>MLlib supports local vectors and matrices stored on a single machine, as well as distributed matrices backed by one or more RDDs. Local vectors and local matrices are simple data models that serve as public interfaces. The underlying linear algebra operations are provided by <a href="http://www.scalanlp.org/">Breeze</a> and <a href="http://jblas.org/">jblas</a>. A training example used in supervised learning is called a “labeled point” in MLlib.</p>
-</div>
-<div class="cell markdown">
-<h3 id="rowmatrix-in-scala"><a class="header" href="#rowmatrix-in-scala">RowMatrix in Scala</a></h3>
-<p>A <code>RowMatrix</code> is a row-oriented distributed matrix without meaningful row indices, backed by an RDD of its rows, where each row is a local vector. Since each row is represented by a local vector, <strong>the number of columns is limited by the integer range but it should be much smaller in practice</strong>.</p>
-<p>A <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.distributed.RowMatrix"><code>RowMatrix</code></a> can be created from an <code>RDD[Vector]</code> instance. Then we can compute its column summary statistics and decompositions.</p>
-<ul>
-<li><a href="https://en.wikipedia.org/wiki/QR_decomposition">QR decomposition</a> is of the form A = QR where Q is an orthogonal matrix and R is an upper triangular matrix.</li>
-<li>For <a href="https://en.wikipedia.org/wiki/Singular_value_decomposition">singular value decomposition (SVD)</a> and <a href="https://en.wikipedia.org/wiki/Principal_component_analysis">principal component analysis (PCA)</a>, please refer to <a href="http://spark.apache.org/docs/latest/mllib-dimensionality-reduction.html">Dimensionality reduction</a>.</li>
-</ul>
-<p>Refer to the <a href="http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.mllib.linalg.distributed.RowMatrix"><code>RowMatrix</code> Scala docs</a> for details on the API.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">import org.apache.spark.mllib.linalg.{Vector, Vectors}
-import org.apache.spark.mllib.linalg.distributed.RowMatrix
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>import org.apache.spark.mllib.linalg.{Vector, Vectors}
-import org.apache.spark.mllib.linalg.distributed.RowMatrix
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">val rows: RDD[Vector] = sc.parallelize(Array(Vectors.dense(12.0, -51.0, 4.0), Vectors.dense(6.0, 167.0, -68.0), Vectors.dense(-4.0, 24.0, -41.0))) // an RDD of local vectors
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>rows: org.apache.spark.rdd.RDD[org.apache.spark.mllib.linalg.Vector] = ParallelCollectionRDD[3670] at parallelize at command-2972105651606776:1
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">// Create a RowMatrix from an RDD[Vector].
-val mat: RowMatrix = new RowMatrix(rows)
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>mat: org.apache.spark.mllib.linalg.distributed.RowMatrix = org.apache.spark.mllib.linalg.distributed.RowMatrix@75c66624
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">mat.rows.collect
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>res0: Array[org.apache.spark.mllib.linalg.Vector] = Array([12.0,-51.0,4.0], [6.0,167.0,-68.0], [-4.0,24.0,-41.0])
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">// Get its size.
-val m = mat.numRows()
-val n = mat.numCols()
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>m: Long = 3
-n: Long = 3
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">// QR decomposition
-val qrResult = mat.tallSkinnyQR(true)
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>qrResult: org.apache.spark.mllib.linalg.QRDecomposition[org.apache.spark.mllib.linalg.distributed.RowMatrix,org.apache.spark.mllib.linalg.Matrix] =
-QRDecomposition(org.apache.spark.mllib.linalg.distributed.RowMatrix@34f5da4f,14.0  21.0                 -14.0
-0.0   -174.99999999999997  70.00000000000001
-0.0   0.0                  -35.000000000000014  )
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">qrResult.R
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>res1: org.apache.spark.mllib.linalg.Matrix =
-14.0  21.0                 -14.0
-0.0   -174.99999999999997  70.00000000000001
-0.0   0.0                  -35.000000000000014
-</code></pre>
-</div>
-</div>
-<div class="cell markdown">
-<hr />
-<hr />
-<h3 id="rowmatrix-in-python"><a class="header" href="#rowmatrix-in-python">RowMatrix in Python</a></h3>
-<p>A <a href="http://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.linalg.distributed.RowMatrix"><code>RowMatrix</code></a> can be created from an <code>RDD</code> of vectors.</p>
-<p>Refer to the <a href="http://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.linalg.distributed.RowMatrix"><code>RowMatrix</code> Python docs</a> for more details on the API.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-python">from pyspark.mllib.linalg.distributed import RowMatrix
-
-# Create an RDD of vectors.
-rows = sc.parallelize([[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]])
-
-# Create a RowMatrix from an RDD of vectors.
-mat = RowMatrix(rows)
-
-# Get its size.
-m = mat.numRows()  # 4
-n = mat.numCols()  # 3
-print (m,'x',n)
-
-# Get the rows as an RDD of vectors again.
-rowsRDD = mat.rows
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>4 x 3
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-</div>
+                        <h1 id="019x_005_rowmatrix"><a class="header" href="#019x_005_rowmatrix">019x_005_RowMatrix</a></h1>
 
                     </main>
 
