--- a/000_2-sds-3-x-ml/index.html
+++ b/000_2-sds-3-x-ml/index.html
@@ -145,186 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-</div>
-<div class="cell markdown">
-<p>This notebook is from databricks document: - <a href="https://docs.databricks.com/_static/notebooks/package-cells.html">https://docs.databricks.com/_static/notebooks/package-cells.html</a></p>
-<p>As you know, we need to eventually package and deploy our models, say using <code>sbt</code>.</p>
-<p>However it is nice to be in a notebook environment to prototype and build intuition and create better pipelines.</p>
-<p>Using package cells we can be in the best of both worlds to an extent.</p>
-</div>
-<div class="cell markdown">
-<h1 id="package-cells"><a class="header" href="#package-cells">Package Cells</a></h1>
-<p><strong>Package cells</strong> are special cells that get compiled when executed. These cells have no visibility with respect to the rest of the notebook. You may think of them as separate scala files.</p>
-<p>This means that only <code>class</code> and <code>object</code> definitions may go inside this cell. You may not have any variable or function definitions lying around by itself. The following cell will not work.</p>
-<p>If you wish to use custom classes and/or objects defined within notebooks reliably in Spark, and across notebook sessions, you must use package cells to define those classes.</p>
-<p>Unless you use package cells to define classes, you may also come across obscure bugs as follows:</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">// We define a class
-case class TestKey(id: Long, str: String)
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>defined class TestKey
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">// we use that class as a key in the group by
-val rdd = sc.parallelize(Array((TestKey(1L, &quot;abd&quot;), &quot;dss&quot;), (TestKey(2L, &quot;ggs&quot;), &quot;dse&quot;), (TestKey(1L, &quot;abd&quot;), &quot;qrf&quot;)))
-
-rdd.groupByKey().collect
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>rdd: org.apache.spark.rdd.RDD[(TestKey, String)] = ParallelCollectionRDD[0] at parallelize at command-2971213210276613:2
-res0: Array[(TestKey, Iterable[String])] = Array((TestKey(1,abd),CompactBuffer(dss)), (TestKey(1,abd),CompactBuffer(qrf)), (TestKey(2,ggs),CompactBuffer(dse)))
-</code></pre>
-</div>
-</div>
-<div class="cell markdown">
-<p>What went wrong above? Even though we have two elements for the key <code>TestKey(1L, &quot;abd&quot;)</code>, they behaved as two different keys resulting in:</p>
-<pre><code>Array[(TestKey, Iterable[String])] = Array(
-  (TestKey(2,ggs),CompactBuffer(dse)), 
-  (TestKey(1,abd),CompactBuffer(dss)), 
-  (TestKey(1,abd),CompactBuffer(qrf)))
-</code></pre>
-<p>Once we define our case class within a package cell, we will not face this issue.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">package com.databricks.example
-
-case class TestKey(id: Long, str: String)
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>Warning: classes defined within packages cannot be redefined without a cluster restart.
-Compilation successful.
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">import com.databricks.example
-
-val rdd = sc.parallelize(Array(
-  (example.TestKey(1L, &quot;abd&quot;), &quot;dss&quot;), (example.TestKey(2L, &quot;ggs&quot;), &quot;dse&quot;), (example.TestKey(1L, &quot;abd&quot;), &quot;qrf&quot;)))
-
-rdd.groupByKey().collect
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>import com.databricks.example
-rdd: org.apache.spark.rdd.RDD[(com.databricks.example.TestKey, String)] = ParallelCollectionRDD[2] at parallelize at command-2971213210276616:3
-res2: Array[(com.databricks.example.TestKey, Iterable[String])] = Array((TestKey(1,abd),CompactBuffer(dss, qrf)), (TestKey(2,ggs),CompactBuffer(dse)))
-</code></pre>
-</div>
-</div>
-<div class="cell markdown">
-<p>As you can see above, the group by worked above, grouping two elements (<code>dss, qrf</code>) under <code>TestKey(1,abd)</code>.</p>
-<p>These cells behave as individual source files, therefore only classes and objects can be defined inside these cells.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">package x.y.z
-
-val aNumber = 5 // won't work
-
-def functionThatWillNotWork(a: Int): Int = a + 1
-</code></pre>
-</div>
-<div class="cell markdown">
-<p>The following cell is the way to go.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">package x.y.z
-
-object Utils {
-  val aNumber = 5 // works!
-  def functionThatWillWork(a: Int): Int = a + 1
-}
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>Warning: classes defined within packages cannot be redefined without a cluster restart.
-Compilation successful.
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">import x.y.z.Utils
-
-Utils.functionThatWillWork(Utils.aNumber)
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>import x.y.z.Utils
-res5: Int = 6
-</code></pre>
-</div>
-</div>
-<div class="cell markdown">
-<p>Why did we get the warning: <code>classes defined within packages cannot be redefined without a cluster restart</code>?</p>
-<p>Classes that get compiled with the <code>package</code> cells get dynamically injected into Spark's classloader. Currently it's not possible to remove classes from Spark's classloader. Any classes that you define and compile will have precedence in the classloader, therefore once you recompile, it will not be visible to your application.</p>
-<p>Well that kind of beats the purpose of iterative notebook development if I have to restart the cluster, right? In that case, you may just rename the package to <code>x.y.z2</code> during development/fast iteration and fix it once everything works.</p>
-</div>
-<div class="cell markdown">
-<p>One thing to remember with package cells is that it has no visiblity regarding the notebook environment.</p>
-<ul>
-<li>The SparkContext will not be defined as <code>sc</code>.</li>
-<li>The SQLContext will not be defined as <code>sqlContext</code>.</li>
-<li>Did you import a package in a separate cell? Those imports will not be available in the package cell and have to be remade.</li>
-<li>Variables imported through <code>%run</code> cells will not be available.</li>
-</ul>
-<p>It is really a standalone file that just looks like a cell in a notebook. This means that any function that uses anything that was defined in a separate cell, needs to take that variable as a parameter or the class needs to take it inside the constructor.</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">package x.y.zpackage
-
-import org.apache.spark.SparkContext
-
-case class IntArray(values: Array[Int])
-
-class MyClass(sc: SparkContext) {
-  def sparkSum(array: IntArray): Int = {
-    sc.parallelize(array.values).reduce(_ + _)
-  }
-}
-
-object MyClass {
-  def sparkSum(sc: SparkContext, array: IntArray): Int = {
-    sc.parallelize(array.values).reduce(_ + _)
-  }
-}
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>Warning: classes defined within packages cannot be redefined without a cluster restart.
-Compilation successful.
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">import x.y.zpackage._
-
-val array = IntArray(Array(1, 2, 3, 4, 5))
-
-val myClass = new MyClass(sc)
-myClass.sparkSum(array)
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>import x.y.zpackage._
-array: x.y.zpackage.IntArray = IntArray([I@44a91426)
-myClass: x.y.zpackage.MyClass = x.y.zpackage.MyClass@5d3b142
-res7: Int = 15
-</code></pre>
-</div>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-<pre><code class="language-scala">MyClass.sparkSum(sc, array)
-</code></pre>
-<div class="output execute_result plain_result" execution_count="1">
-<pre><code>res8: Int = 15
-</code></pre>
-</div>
-</div>
-<div class="cell markdown">
-<h1 id="build-packages-locally"><a class="header" href="#build-packages-locally">Build Packages Locally</a></h1>
-<p>Although package cells are quite handy for quick prototyping in notebook environemnts, it is better to develop packages locally on your laptop and then upload the packaged or assembled jar file into databricks to use the classes and methods developed in the package.</p>
-</div>
+                        <h1 id="010a_packagecells"><a class="header" href="#010a_packagecells">010a_packageCells</a></h1>
 
                     </main>
 
