--- a/000_6-sds-3-x-dl/contents/000_6-sds-3-x-dl/064_DLbyABr_08-Operations.html
+++ b/000_6-sds-3-x-dl/contents/000_6-sds-3-x-dl/064_DLbyABr_08-Operations.html
@@ -145,160 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="cell markdown">
-<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
-<p>This is a 2019-2021 augmentation and update of <a href="https://www.linkedin.com/in/adbreind">Adam Breindel</a>'s initial notebooks.</p>
-<p><em>Thanks to <a href="https://www.linkedin.com/in/christianvonkoch/">Christian von Koch</a> and <a href="https://www.linkedin.com/in/william-anz%C3%A9n-b52003199/">William Anzén</a> for their contributions towards making these materials Spark 3.0.1 and Python 3+ compliant.</em></p>
-</div>
-<div class="cell markdown">
-<h1 id="operations-in-the-real-world"><a class="header" href="#operations-in-the-real-world">Operations in the Real World</a></h1>
-<h2 id="practical-options-tools-patterns-and-considerations-for-deep-learning"><a class="header" href="#practical-options-tools-patterns-and-considerations-for-deep-learning">Practical Options, Tools, Patterns, and Considerations for Deep Learning</a></h2>
-</div>
-<div class="cell markdown">
-<p>There are various ways to use deep learning in an enterprise setting that may not require designing your own networks!</p>
-<h3 id="ways-to-use-deep-learning"><a class="header" href="#ways-to-use-deep-learning">Ways to Use Deep Learning</a></h3>
-<p>(in order from least complex/expensive investment to most)</p>
-<p>[1] Load and use a pretrained model</p>
-<p>Many of the existing toolkit projects offer models pretrained on datasets, including</p>
-<ul>
-<li>natural language corpus models</li>
-<li>image datasets like ImageNet (http://www.image-net.org/) or Google's Open Image Dataset (https://research.googleblog.com/2016/09/introducing-open-images-dataset.html)</li>
-<li>video datasets like the YouTube 8 million video dataset (https://research.googleblog.com/2016/09/announcing-youtube-8m-large-and-diverse.html)</li>
-</ul>
-<p>[2] Augmenting a pretrained model with new training data, or using it in a related context (see Transfer Learning)</p>
-<p>[3] Use a known, established network type (topology) but train on your own data</p>
-<p>[4] Modify established network models for your specific problem</p>
-<p>[5] Research and experiment with new types of models</p>
-<p><strong>Just because Google DeepMind, Facebook, and Microsoft are getting press for doing a lot of new research doesn't mean you have to do it too.</strong></p>
-<p><img src="http://i.imgur.com/XczCfNR.png" width=500> <img src="http://i.imgur.com/vcaj99I.jpg" width=500></p>
-<p>Data science and machine learning is challenging in general for enterprises (though some industries, such as pharma, have been doing it for a long time). Deep learning takes that even further, since deep learning experiments may require new kinds of hardware ... in some ways, it's more like chemistry than the average IT project!</p>
-</div>
-<div class="cell markdown">
-<h3 id="tools-and-processes-for-your-deep-learning-pipeline"><a class="header" href="#tools-and-processes-for-your-deep-learning-pipeline">Tools and Processes for your Deep Learning Pipeline</a></h3>
-<h4 id="data-munging"><a class="header" href="#data-munging">Data Munging</a></h4>
-<p>Most of the deep learning toolkits are focused on model-building performance or flexibility, less on production data processing.</p>
-<p>However, Google recently introduced <code>tf.Transform</code>, a data processing pipeline project: https://github.com/tensorflow/transform</p>
-<p>and Dataset, an API for data processing: https://www.tensorflow.org/api_docs/python/tf/contrib/data/Dataset</p>
-<p>TensorFlow can read from HDFS and run on Hadoop although it <em>does not</em> scale out automatically on a Hadoop/Spark cluster: https://www.tensorflow.org/deploy/hadoop</p>
-<p>Falling back to &quot;regular&quot; tools, we have Apache Spark for big data, and the Python family of pandas, sklearn, scipy, numpy.</p>
-<h4 id="experimenting-and-training"><a class="header" href="#experimenting-and-training">Experimenting and Training</a></h4>
-<p>Once you want to scale beyond your laptop, there are few options...</p>
-<ul>
-<li>AWS GPU-enabled instances</li>
-<li>Deep-learning-infrastructure as a Service
-<ul>
-<li>EASY
-<ul>
-<li>&quot;Floyd aims to be the Heroku of Deep Learning&quot; https://www.floydhub.com/</li>
-<li>&quot;Effortless infrastructure for deep learning&quot; https://www.crestle.com/</li>
-<li>&quot;GitHub of Machine Learning / We provide machine learning platform-as-a-service.&quot; https://valohai.com/</li>
-<li>&quot;Machine Learning for Everyone&quot; (may be in closed beta) https://machinelabs.ai</li>
-<li>Algorithms as a service / model deployment https://algorithmia.com/</li>
-</ul>
-</li>
-<li>MEDIUM Google Cloud Platform &quot;Cloud Machine Learning Engine&quot; https://cloud.google.com/ml-engine/</li>
-<li>HARDER Amazon Deep Learning AMI + CloudFormation https://aws.amazon.com/blogs/compute/distributed-deep-learning-made-easy/</li>
-</ul>
-</li>
-<li>On your own infrastructure or VMs
-<ul>
-<li>Distributed TensorFlow is free, OSS</li>
-<li>Apache Spark combined with Intel BigDL (CPU) or DeepLearning4J (GPU)</li>
-<li>TensorFlowOnSpark</li>
-<li>CERN Dist Keras (Spark + Keras) https://github.com/cerndb/dist-keras</li>
-</ul>
-</li>
-</ul>
-<h4 id="frameworks"><a class="header" href="#frameworks">Frameworks</a></h4>
-<p>We've focused on TensorFlow and Keras, because that's where the &quot;center of mass&quot; is at the moment.</p>
-<p>But there are lots of others. Major ones include:</p>
-<ul>
-<li>Caffe</li>
-<li>PaddlePaddle</li>
-<li>Theano</li>
-<li>CNTK</li>
-<li>MXNet</li>
-<li>DeepLearning4J</li>
-<li>BigDL</li>
-<li>Torch/PyTorch</li>
-<li>NVIDIA Digits</li>
-</ul>
-<p>and there are at least a dozen more minor ones.</p>
-<h4 id="taking-your-trained-model-to-production"><a class="header" href="#taking-your-trained-model-to-production">Taking Your Trained Model to Production</a></h4>
-<p>Most trained models can predict in production in near-zero time. (Recall the forward pass is just a bunch of multiplication and addition with a few other calculations thrown in.)</p>
-<p>For a neat example, you can persist Keras models and load them to run live in a browser with Keras.js</p>
-<p>See Keras.js for code and demos: https://github.com/transcranial/keras-js</p>
-<img src="http://i.imgur.com/5xx62zw.png" width=700>
-<p>TensorFlow has an Android example at https://github.com/tensorflow/tensorflow/tree/master/tensorflow/examples/android</p>
-<p>and Apple CoreML supports Keras models: https://developer.apple.com/documentation/coreml/converting<em>trained</em>models<em>to</em>core_ml</p>
-<p>(remember, the model is already trained, we're just predicting here)</p>
-<h4 id="and-for-your-server-side-model-update-and-serve-tasks-or-bulk-prediction-at-scale"><a class="header" href="#and-for-your-server-side-model-update-and-serve-tasks-or-bulk-prediction-at-scale">And for your server-side model update-and-serve tasks, or bulk prediction at scale...</a></h4>
-<p>(imagine classifying huge batches of images, or analyzing millions of chat messages or emails)</p>
-<ul>
-<li>
-<p>TensorFlow has a project called TensorFlow Serving: https://tensorflow.github.io/serving/</p>
-</li>
-<li>
-<p>Spark Deep Learning Pipelines (bulk/SQL inference) https://github.com/databricks/spark-deep-learning</p>
-</li>
-<li>
-<p>Apache Spark + (DL4J | BigDL | TensorFlowOnSpark)</p>
-</li>
-<li>
-<p>DeepLearning4J can import your Keras model: https://deeplearning4j.org/model-import-keras</p>
-<ul>
-<li>(which is a really nice contribution, but not magic -- remember the model is just a pile of weights, convolution kernels, etc. ... in the worst case, many thousands of floats)</li>
-</ul>
-</li>
-<li>
-<p>http://pipeline.io/ by Netflix and Databricks alum Chris Fregly</p>
-</li>
-<li>
-<p>MLeap http://mleap-docs.combust.ml/</p>
-</li>
-</ul>
-<h3 id="security-and-robustness"><a class="header" href="#security-and-robustness">Security and Robustness</a></h3>
-<p>A recent (3/2017) paper on general key failure modes is <strong>Failures of Deep Learning</strong>: https://arxiv.org/abs/1703.07950</p>
-<p>Deep learning models are subject to a variety of unexpected perturbations and adversarial data -- even when they seem to &quot;understand,&quot; they definitely don't understand in a way that is similar to us.</p>
-<img src="http://i.imgur.com/3LjF9xl.png">
-<p>Ian Goodfellow has distilled and referenced some of the research here: https://openai.com/blog/adversarial-example-research/</p>
-<ul>
-<li>He is also maintainer of an open-source project to measure robustness to adversarial examples, Clever Hans: https://github.com/tensorflow/cleverhans</li>
-<li>Another good project in that space is Foolbox: https://github.com/bethgelab/foolbox</li>
-</ul>
-<h5 id="its-all-fun-and-games-until-a-few-tiny-stickers-that-a-human-wont-even-notice--turn-a-stop-sign-into-a-go-sign-for-your-self-driving-car--and-thats-exactly-what-this-team-of-researchers-has-done-in-robust-physical-world-attacks-on-machine-learning-models-httpsarxivorgpdf170708945v1pdf"><a class="header" href="#its-all-fun-and-games-until-a-few-tiny-stickers-that-a-human-wont-even-notice--turn-a-stop-sign-into-a-go-sign-for-your-self-driving-car--and-thats-exactly-what-this-team-of-researchers-has-done-in-robust-physical-world-attacks-on-machine-learning-models-httpsarxivorgpdf170708945v1pdf">It's all fun and games until a few tiny stickers that a human won't even notice ... turn a stop sign into a &quot;go&quot; sign for your self-driving car ... <strong>and that's exactly what this team of researchers has done</strong> in <em>Robust Physical-World Attacks on Machine Learning Models</em>: https://arxiv.org/pdf/1707.08945v1.pdf</a></h5>
-</div>
-<div class="cell markdown">
-<h1 id="final-notes"><a class="header" href="#final-notes">Final Notes</a></h1>
-<p>The research and projects are coming so fast that this will probably be outdated by the time you see it ...</p>
-<h4 id="2017-is-the-last-ilsvrc-httpimage-netorgchallengesbeyond_ilsvrcphp"><a class="header" href="#2017-is-the-last-ilsvrc-httpimage-netorgchallengesbeyond_ilsvrcphp">2017 is the last ILSVRC! http://image-net.org/challenges/beyond_ilsvrc.php</a></h4>
-<p>Try visualizing principal components of high-dimensional data with <strong>TensorFlow Embedding Projector</strong> http://projector.tensorflow.org/</p>
-<p>Or explore with Google / PAIR's Facets tool: https://pair-code.github.io/facets/</p>
-<p>Visualize the behavior of Keras models with keras-vis: https://raghakot.github.io/keras-vis/</p>
-<p>Want more out of Keras without coding it yourself? See if your needs are covered in the extension repo for keras, keras-contrib: https://github.com/farizrahman4u/keras-contrib</p>
-<p>Interested in a slightly different approach to APIs, featuring interactive (imperative) execution? In the past year, a lot of people have started using PyTorch: http://pytorch.org/</p>
-<p><strong>XLA</strong>, an experimental compiler to make TensorFlow even faster: https://www.tensorflow.org/versions/master/experimental/xla/</p>
-<p>...and in addition to refinements of what we've already talked about, there is bleeding-edge work in</p>
-<ul>
-<li>Neural Turing Machines</li>
-<li>Code-generating Networks</li>
-<li>Network-designing Networks</li>
-<li>Evolution Strategies (ES) as an alternative to DQL / PG: https://arxiv.org/abs/1703.03864</li>
-</ul>
-</div>
-<div class="cell markdown">
-<h1 id="books"><a class="header" href="#books">Books</a></h1>
-<p>To fill in gaps, refresh your memory, gain deeper intuition and understanding, and explore theoretical underpinnings of deep learning...</p>
-<h4 id="easier-intro-books-less-math"><a class="header" href="#easier-intro-books-less-math">Easier intro books (less math)</a></h4>
-<p><em>Hands-On Machine Learning with Scikit-Learn and TensorFlow: Concepts, Tools, and Techniques to Build Intelligent Systems</em> by Aurélien Géron</p>
-<p><em>Deep Learning with Python</em> by Francois Chollet</p>
-<p><em>Fundamentals of Machine Learning for Predictive Data Analytics: Algorithms, Worked Examples, and Case Studies</em> by John D. Kelleher, Brian Mac Namee, Aoife D'Arcy</p>
-<h4 id="more-thorough-books-more-math"><a class="header" href="#more-thorough-books-more-math">More thorough books (more math)</a></h4>
-<p><em>Deep Learning</em> by Ian Goodfellow, Yoshua Bengio, Aaron Courville</p>
-<p><em>Information Theory, Inference and Learning Algorithms 1st Edition</em> by David J. C. MacKay</p>
-</div>
-<div class="cell code" execution_count="1" scrolled="false">
-</div>
+                        <h1 id="064_dlbyabr_08-operations"><a class="header" href="#064_dlbyabr_08-operations">064_DLbyABr_08-Operations</a></h1>
 
                     </main>
 
